tests/cn/multifile/g.c.test
return code: 1
./g.exec.c:87:18: error: call to undeclared function 'f'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   87 |       __cn_ret = f((CN_LOAD(x) - 12));
      |                  ^
1 error generated.
Failed to compile 'g.exec.c'.